mrm-vault-preprod-elk/preprod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mrm-vault-preprod-ingress
  namespace: mrm-vault-preprod
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: mrmvault-preprod-alb
    alb.ingress.kubernetes.io/load-balancer-name: mrmvault-preprod-alb
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/subnets: subnet-07b56c94d6a2070e8, subnet-0dd2603b99fa5cc7e, subnet-01ba189aa6d8f1452
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: default-backend
                port:
                  number: 80
